// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Ticket /> shapshots should render with the given icon shown 1`] = `
<div
  className="ticket"
  onClick={undefined}
  style={
    Object {
      "height": 80,
      "padding": 12,
    }
  }
>
  <resilient-image
    props={
      Object {
        "alwaysShow": true,
        "children": <i
          className="mdi mdi-monitor"
        />,
        "className": "imageArea",
        "onLoadDone": [Function],
        "src": undefined,
      }
    }
  >
    <i
      className="mdi mdi-monitor"
    />
  </resilient-image>
  <div
    className="content"
  >
    <div
      className="textContent"
    >
      <div
        className="titleText"
      >
        myTitle
      </div>
    </div>
    <div
      className="minorText"
    />
  </div>
</div>
`;

exports[`<Ticket /> shapshots should render with the given image 1`] = `
<div
  className="ticket"
  onClick={undefined}
  style={
    Object {
      "height": 80,
      "padding": 12,
    }
  }
>
  <resilient-image
    props={
      Object {
        "alwaysShow": true,
        "children": undefined,
        "className": "imageArea",
        "onLoadDone": [Function],
        "src": "myImage",
      }
    }
  />
  <div
    className="content"
  >
    <div
      className="textContent"
    >
      <div
        className="titleText"
      >
        myTitle
      </div>
    </div>
    <div
      className="minorText"
    />
  </div>
</div>
`;

exports[`<Ticket /> shapshots should render with the given minor text 1`] = `
<div
  className="ticket"
  onClick={undefined}
  style={
    Object {
      "height": 80,
      "padding": 12,
    }
  }
>
  <resilient-image
    props={
      Object {
        "alwaysShow": true,
        "children": undefined,
        "className": "imageArea",
        "onLoadDone": [Function],
        "src": undefined,
      }
    }
  />
  <div
    className="content"
  >
    <div
      className="textContent"
    >
      <div
        className="titleText"
      >
        myTitle
      </div>
    </div>
    <div
      className="minorText"
    >
      This is some minor text
    </div>
  </div>
</div>
`;

exports[`<Ticket /> shapshots should render with the given title 1`] = `
<div
  className="ticket"
  onClick={undefined}
  style={
    Object {
      "height": 80,
      "padding": 12,
    }
  }
>
  <resilient-image
    props={
      Object {
        "alwaysShow": true,
        "children": undefined,
        "className": "imageArea",
        "onLoadDone": [Function],
        "src": undefined,
      }
    }
  />
  <div
    className="content"
  >
    <div
      className="textContent"
    >
      <div
        className="titleText"
      >
        myTitle
      </div>
    </div>
    <div
      className="minorText"
    />
  </div>
</div>
`;
